# embassy

./: .gitmodules
cyw43/src/: bus.rs
embassy-net/src/: udp.rs
embassy-rp/src/: i2c.rs  spi.rs
examples/brighty/: Cargo.toml  build.rs  memory.x
examples/brighty/.cargo/: config.toml
examples/brighty/src/: color.rs  consts.rs  leds.rs  main.rs  peripheral_macros.rs  sk6812.rs  udplisten.rs
examples/squishy/: .gitignore  Cargo.toml  flash.cfg
examples/squishy/.cargo/: config.toml
examples/squishy/src/: buttons.rs  command.rs  consts.rs  leds.rs  main.rs  tca9555.rs  websocket.rs
