[package]
edition = "2021"
name = "brighty"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", path = "../../embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../../embassy-executor", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", path = "../../embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.4.0", path = "../../embassy-net", features = ["defmt", "tcp", "udp", "dns", "dhcpv4", "dhcpv4-hostname", "medium-ethernet"] }
embassy-futures = { version = "0.1.0", path = "../../embassy-futures", features = ["defmt"] }
cyw43 = { version = "0.2.0", path = "../../cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", path = "../../cyw43-pio", features = ["defmt", "overclock"] }
pio = "0.2.1"
pio-proc = "0.2"
fixed = "1.28.0"

defmt = "0.3"
defmt-rtt = { version = "0.4", path = "../../defmt/firmware/defmt-rtt" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0" }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
portable-atomic = { version = "1.7", features = ["critical-section"] }
static_cell = "2.1"

heapless = { version = "0.8.0", features = ["ufmt"] }
ufmt = "0.2"
edge-ws = "0.2.0"
rand_core = "0.6.4"

num = { version = "0.4", default-features = false }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
nom = { version = "7", default-features = false }

[profile.release]
debug = 2
lto = true

[features]
mbp = []
